--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trpc-on-app-router",
+  "name": "ts-trpc-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "bin": {
+    "ts-trpc-boilerplate": "bin/install.mjs"
+  },
   "dependencies": {
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
     "@trpc/server": "^10.40.0",
     "next": "13.5.4",
+    "ora": "^7.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
